<resources>
    <string name="error_required_fields_missing">Required fields are missing.</string>
    <string name="error_user_profile_not_exist">User does not exist. Please contact us at 080-47091716 or at digitalschool@evidyaloka.org to activate the Student account.</string>
    <string name="error_invalid_mobile">Invalid mobile number.</string>
    <string name="error_otp_used">OTP has been used already.</string>
    <string name="student_error_user_not_exist">User does not exist. Please ask your parent / guardian to register.</string>
    <string name="error_data_not_valid">Data submitted is not valid. Please contact the admin.</string>
    <string name="error_otp_expired">OTP Expired.</string>
    <string name="error_otp_invalid">OTP is Invalid.</string>
    <string name="title_activity_student_home" translatable="false">StudentHomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="label_grade_with_colon">Grade:</string>
    <string name="label_lets_start">Let\'s start</string>
    <string name="label_logout">Logout</string>
    <string name="label_sorry">Sorry!</string>
    <string name="label_your_account_inactive">your account is not active yet.</string>
    <string name="label_ok">Ok</string>
    <string name="learn">Learn</string>
    <string name="label_courses">Courses</string>
    <string name="label_welcome_to">Welcome to</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_otp_sent_to">Enter OTP sent to your number</string>
    <string name="change">Change</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_mobile">Enter Mobile Number</string>
    <string name="student_greeting_1">Hi Welcome!</string>
    <string name="student_greeting_3">Hi There!</string>
    <string name="student_greeting_2">Dear Student, \nLogin to start Learning</string>
    <string name="parent_greeting_2">Dear Parent, \nPlease login to your account</string>
    <string name="label_heading_student_selection">Please select student</string>
    <string name="take_your_first_step_by_choosing_your_subjects_to_start_learning_now">Take your first step by choosing your subjects to start learning now.</string>
    <string name="data_submited_not_valid">Data submitted is not valid. Please contact the admin.</string>
    <string name="error">Error</string>
    <string name="user_should_be_guardian">User should be guardian</string>
    <string name="digital_school_doesnot_exist">Digital school Does not exist</string>
    <string name="center_doesnot_exist">Center Does not exist</string>
    <string name="could_not_able_to_fetch_data">Could not able to fetch data. Please contact admin</string>
    <string name="label_timetable">Timetable</string>
    <string name="label_subjects">Subjects</string>
    <string name="label_course_timetable">Course Timetable</string>
    <string name="label_toolbar_title_classes">Classes</string>
    <string name="label_faculty">Faculty : </string>
    <string name="please_select_course">Please select course</string>
    <string name="hi">"Hi "</string>
    <string name="today">"Today, "</string>
    <string name="congratulations_you_may_begin_your_classes_now">Congratulations!<br /> You may begin your classes now</string>
    <string name="err_network">Something went wrong. Please try after sometime</string>
    <string name="attend">Attend</string>
    <string name="label_pick_your_day">Pick your day and time to begin learning</string>
    <string name="label_i_would_like">I would like to study on</string>
    <string name="label_begin_class">Begin Class</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_save">Save</string>
    <string name="guardian_not_active">Guardian is not active.</string>
    <string name="select_more_time">Select more time to cover subjects.</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="early_morning">Early Morning</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="early_morning_timing">6am - 9pm</string>
    <string name="morning_timing">9am - 12pm</string>
    <string name="afternoon_timing">12pm - 4pm</string>
    <string name="evening_timing">4pm - 7pm</string>
    <string name="min_1_study_time">Please select minimum 1 study time.</string>
    <string name="min_3_study_day">Please select minimum 3 day.</string>
    <string name="min_1_time_3_days">Please select minimum 1 study time &amp; 3 days.</string>
    <string name="menu_my_school">My School</string>
    <string name="menu_your_doubts">Your Doubts</string>
    <string name="menu_terms_of_use">Terms of Use</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_support">Support</string>
    <string name="student">Student</string>
    <string name="parent">Parent</string>
    <string name="grade">Grade</string>
    <string name="join_class">Join class</string>
    <string name="live_class">Live class</string>
    <string name="live_session_link_missing">Live session link missing</string>
    <string name="open_with">Open with</string>
    <string name="you_have_no_classes">You have %d classes today</string>
    <string name="you_have_no_class">You have %d class today</string>
    <string name="you_will_have_no_classes_next">You will have %d classes next</string>
    <string name="you_will_have_no_class_next">You will have %d class next</string>
    <string name="you_have_no_subtopics">You have %d subtopics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_heading_course_timetable">Course Timetable</string>
    <string name="labeL_all_class">All</string>
    <string name="labeL_missed_class">Missed class</string>
    <string name="label_scheduled">Scheduled</string>
    <string name="label_class_taken">Class taken</string>
    <string name="label_bt_apply">Apply</string>
    <string name="label_bt_reset">Reset</string>
    <string name="join">Join</string>
    <string name="label_filter">Filter</string>
    <string name="plural_classes">%d classes</string>
    <string name="singular_classes">%d class</string>
    <string name="label_bt_view">View</string>
    <string name="label_bt_read">Read</string>
    <string name="label_bt_done">Done</string>
    <string name="label_doubt">Doubt?</string>
    <string name="label_asked_doubt">Asked doubt</string>
    <string name="label_bookmark">Bookmark</string>
    <string name="label_video_lessons">Video lessons</string>
    <string name="label_worksheet">Worksheet</string>
    <string name="label_activity">Activity</string>
    <string name="label_textbook">Textbook</string>
    <string name="video_not_found">Video not found</string>
    <string name="video_is_not_playable">Video is not playable</string>
    <string name="unknown_error">Unknown error</string>
    <string name="invalid_video_url">Invalid video url</string>
    <string name="device_memory_full">Device menory full</string>
    <string name="choose">Choose</string>
    <string name="rationale_storage_doubt">Please grant storage access to enable the app to upload the doubt picture</string>
    <string name="rationale_camera_storage_doubt">Please grant camera and storage access to enable the app to take picture of your doubt</string>
    <string name="video_not_allow_to_play_embed">Video not allow to play in embed</string>
    <string name="submit">Submit</string>
    <string name="ask_doubt">Ask Doubt</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="field_missing">Some fields are missing</string>
    <string name="invalid_request">Invalid request</string>
    <string name="student_is_not_related_to_guardian">Student is not related to guardian</string>
    <string name="invalid_session">Invalid session</string>
    <string name="file_does_not_exist">File does not exist</string>
    <string name="your_doubt_submitted_successfully">Your doubt has been submitted successfully</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="no_content">There is no content for this topic</string>
    <string name="label_no_doubts">You have not yet asked doubts.</string>
    <string name="label_heading_your_doubts">My Doubts</string>
    <string name="no_of_doubt_singular">%d Doubt</string>
    <string name="no_of_doubt_plural">%d Doubts</string>
    <string name="label_today">Today</string>
    <string name="label_heading_asked_doubts">Asked Doubts</string>
    <string name="label_bt_make_correction">Make Correction</string>
    <string name="subject_count">%d of %d Lessons</string>
    <string name="title_lessons">%s lessons</string>
    <string name="no_document_available">No document available</string>
    <string name="device_not_supported">Device not supported, Please contact admin.</string>
    <string name="pdf_on_fail">An Error occured while downloading PDF. Please contact the admin.</string>
    <string name="attendance_submit_error">Not able to submit session attendance.</string>
    <string name="please_attend_previous_class">Please attend previous class to view this class</string>
    <string name="steps_to_ask_you_doubt">Steps to ask your doubts,</string>
    <string name="_1_write_down_your_doubt_in_your_notebook_paper">1. Write down your doubts in your notebook / paper</string>
    <string name="_2_click_a_picture">2. Click a picture</string>
    <string name="_3_upload_here">3. Upload here</string>
    <string name="one_of_the_teachers_will_clarify_your_doubts_as_a_reply_here_shortly">One of the Teachers will clarify your doubts as a reply here, shortly.</string>
    <string name="student_greeting_4">Start your learning journey!</string>
    <string name="label_my_courses">My Courses</string>
    <string name="label_tv_study_timings">Study Timings</string>
    <string name="label_tv_study_timing">Study Timing</string>
    <string name="label_tv_change_timing">Change Timing</string>
    <string name="label_tv_change_timings">Change Timings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_language">Language</string>
    <string name="student_enrolled_success_msg">We have received your application successfully.</string>
    <string name="thank_you">Thank You!</string>
    <string name="enroll_another_student">Enroll Another Student</string>
    <string name="start_learning">Start Learning</string>
    <string name="access_the_entire_course_and_start_learning">Access the entire course and start learning!</string>
    <string name="join_school">Join School</string>
    <string name="menu_learn_through_television">Learn through Television</string>
    <string name="join_this_digital_school_for_free">Join this Digital School for Free!</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_missed_class">Missed class</string>
    <string name="menu_bookmark_class">Bookmark class</string>
</resources>