<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MaterialAlertDialogTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_rounded_corner"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_10dp">

    <LinearLayout
        android:id="@+id/steps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_80dp"
            app:srcCompat="@drawable/ic_bunny_wriiting" />

        <TextView
            android:id="@+id/textView11"
            style="@style/Theme.Text.SecondaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_10dp"
            android:text="@string/steps_to_ask_you_doubt"
            android:textAppearance="@style/TextAppearance.Caption" />

        <TextView
            android:id="@+id/textView12"
            style="@style/Theme.Text.SecondaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:text="@string/_1_write_down_your_doubt_in_your_notebook_paper"
            android:textAppearance="@style/TextAppearance.Caption" />

        <TextView
            android:id="@+id/textView13"
            style="@style/Theme.Text.SecondaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:text="@string/_2_click_a_picture"
            android:textAppearance="@style/TextAppearance.Caption" />

        <TextView
            android:id="@+id/textView14"
            style="@style/Theme.Text.SecondaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:text="@string/_3_upload_here"
            android:textAppearance="@style/TextAppearance.Caption" />

        <TextView
            android:id="@+id/textView15"
            style="@style/Theme.Text.SecondaryColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_10dp"
            android:text="@string/one_of_the_teachers_will_clarify_your_doubts_as_a_reply_here_shortly"
            android:textAppearance="@style/TextAppearance.Caption" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/choose"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btCamera"
                android:layout_width="@dimen/size_80dp"
                android:layout_height="@dimen/size_80dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/bg_course_timetable_unselected"
                android:src="@drawable/ic_round_camera_36" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_5dp"
                android:text="@string/camera" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btGallery"
                android:layout_width="@dimen/size_80dp"
                android:layout_height="@dimen/size_80dp"
                android:layout_marginStart="@dimen/margin_16dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:background="@drawable/bg_course_timetable_unselected"
                android:src="@drawable/ic_round_photo_36" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_5dp"
                android:text="@string/gallery" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>