<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/size_16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_bottom_sheet_curved"
            android:elevation="@dimen/size_15dp"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_30dp"
            android:paddingTop="@dimen/padding_30dp"
            android:paddingEnd="@dimen/padding_30dp"
            android:paddingBottom="@dimen/padding_20dp"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rb_group_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checkedButton="@id/rb_all"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/size_10dp"
                    android:visibility="visible">

                    <RadioButton
                        android:id="@+id/rb_all"
                        style="@style/TextAppearance.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/selector_radio"
                        android:drawablePadding="@dimen/size_25dp"
                        android:text="@string/labeL_all_class"
                        android:textColor="@color/student_black" />

                    <RadioButton
                        android:id="@+id/rb_missed"
                        style="@style/TextAppearance.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/selector_radio"
                        android:drawablePadding="@dimen/size_25dp"
                        android:paddingTop="@dimen/size_15dp"
                        android:text="@string/labeL_missed_class"
                        android:textColor="@color/class_missed_color" />

                    <RadioButton
                        android:id="@+id/rb_taken"
                        style="@style/TextAppearance.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/selector_radio"
                        android:drawablePadding="@dimen/size_25dp"
                        android:paddingTop="@dimen/size_15dp"
                        android:text="@string/label_class_taken"
                        android:textColor="@color/class_taken_color" />

                    <RadioButton
                        android:id="@+id/rb_scheduled"
                        style="@style/TextAppearance.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/selector_radio"
                        android:drawablePadding="@dimen/size_25dp"
                        android:paddingTop="@dimen/size_15dp"
                        android:text="@string/label_scheduled"
                        android:textColor="@color/class_scheduled_color" />

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:paddingTop="@dimen/size_30dp">

                <TextView
                    android:id="@+id/bt_reset"
                    style="@style/Theme.Student.Button.White"
                    android:textAppearance="@style/TextAppearance.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.45"
                    android:enabled="true"
                    android:text="@string/label_bt_reset"
                    android:textAllCaps="false" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1" />

                <TextView
                    android:id="@+id/bt_apply"
                    style="@style/Theme.Student.Button.Gradient"
                    android:textAppearance="@style/TextAppearance.Body2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0.45"
                    android:enabled="true"
                    android:text="@string/label_bt_apply"
                    android:textAlignment="center"
                    android:textAllCaps="false" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
